--- a/client/default/index.html
+++ b/client/default/index.html
@@ -3,7 +3,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Make general background "FeedHenry Green", note internal style tag overwrites external "css/bootstrap.min.css" for styles  -->
-	<style>bg {background:#8AB997;}</style>
+	<!-- <style>bg {background:#0000a8;}</style> -->
 </head>
 <link href="css/style.css" rel="stylesheet" />
 
@@ -19,7 +19,7 @@
 		<p></p>
 		<img src="resources/fh_logo.png" align="middle">
 		<p></p>
-		<h1>Camera Test</h1>
+		<h1> Welcome To The Eighties </h1>
 
 		<p></p>
 		<button type="button" id="submit_button" class="btn btn-lg btn-danger"> Take Picture </button>
