--- a/client/default/index.html
+++ b/client/default/index.html
@@ -19,7 +19,7 @@
 		<p></p>
 		<img src="resources/fh_logo.png" align="middle">
 		<p></p>
-		<h1> Welcome To The Eighties </h1>
+		<h1> Take a pic with DOS </h1>
 
 		<p></p>
 		<button type="button" id="submit_button" class="btn btn-lg btn-danger"> Take Picture </button>
