added another slogan

--- a/client/default/index.html
+++ b/client/default/index.html
@@ -23,6 +23,10 @@
 
 		<p></p>
 		<button type="button" id="submit_button" class="btn btn-lg btn-danger"> Take Picture </button>
+		<p></p>
+		<p></p>
+		<h1> Tonight I'm gonna take </h1>
+		<h1> a pic like its 1989 </h1>
 	</center>
 
 </bg>
